--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#Extra-Curriculars">Extra-Curriculars</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#Memberships">Memberships</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Achievements</a>
@@ -71,7 +74,13 @@
           <div class="subheading mb-5">
             <a href="heathermeat7@gmail.com">heathermeat7@gmail.com</a>
           </div>
-          <p class="mb-5">I'm fourth-year computer science student at Ontario Tech University with a passion for learning new skills and gaining new experiences. I have a particular interest in data analysis, web development and QA, but I'll try anything once and I'm not afraid of a challenge!</p>
+          <p class="mb-5">I'm computer science student at Ontario Tech University with a passion for designing and developing
+            creative solutions to problems, with a particular interest in data analysis, web development and QA. I have a wide variety
+            of skills and life experience that I bring to every task. I'm unafraid of challenges, able to adapt quickly,
+            and always open to learning new things
+            <br><br>
+            In my free time, I can be found writing poetry, crocheting, or throwing my dnd characters into new and exciting situations</p>
+
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item flip">
               <a href="https://www.linkedin.com/in/heather-meatherall">
@@ -206,14 +215,72 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Extra-Curriculars">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
+          <h2 class="mb-5">Extra-Curriculars</h2>
 
-          <p class="mb-0">I've been a member of Girl Guides of Canada for over 15 years, where I helped to plan and run events for variou age groups.
-          I enjoy camping and spending time outside. I play a number of musical instruments, including piano, and tuba.
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">VP | Events and Outreach for OTU Student Chapter ACM-W</h3>
+              <li>Organized and ran monthly events around career development, networking, and empowering
+                women in computing</li>
+              <li>Provided feedback on ideas and changes to help rpoduce the best possible result</li>
+              <li>Collaborated with other executives of the club to plan, market and run events</li>
+              <li>Partnered with industry professionals for a career panel</li>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2024 - Present</span>
+            </div>
+          </div>
 
-          In my free time, I can be found crocheting, writing, and throwing my dnd characters into new and exciting situations</p>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">ACE x OVIN Accelerating Automotive Innovation Event</h3>
+              <li>Collaborated with a team to develop an innovative solution that augmented the operating domain
+                of a fleet of automated delivery vehicles</li>
+              <li>Provided feedback on ideas and changes to help rpoduce the best possible result</li>
+              <li>Developed a proposal for “The B.O.X (Bulk Order Xpress) Fleet” a subset of the fleet equipped with
+                an increased carrying capacity and dedicated to delivering to high volume addresses</li>
+              <li>Selected as a top team and presented our proposal at the Final Symposium in front of a panel of
+                industry experts</li>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2024 - Present</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Memberships">
+        <div class="my-auto">
+          <h2 class="mb-5">Memberships</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Women For Stem</h3>
+              <li> Met necessary criteria, including maintain grade point average and participating in required
+                events, to remain a program member</li>
+              <li>Utilized well-honed public speaking skills to present at various program events</li>
+              <li>Attended various professional development workshops, outside of required quota</li>
+              <li>Made and maintained meaningful connection with members and mentors</li>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2021 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Girl Guides of Canada</h3>
+              <li>Worked with a diverse group of people to accomplish tasks</li>
+              <li>Organized camps and events for members within the local area</li>
+              <li>Organized and lead a Zoom meeting on coding using Scratch where each participant created a
+                simple game</li>
+              <li>Participated in various volunteer activities within the local community</li>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2008 - Present</span>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -223,10 +290,13 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              President’s Honours List</li>
+              Most Feasible Green Technology Award | ACE x OVIN Accelerating Automotive Innovation Event</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Dean's Honour List</li>
+              President’s Honours List | Ontario Tech University</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Dean's Honour List | Ontario Tech University</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Level 8 Royal Conservatory Piano-First Class Honours   </li>
@@ -235,7 +305,7 @@
               Level 8 Royal Conservatory Theory-First Class Honours with Distinction</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Canada Cord (Guiding) </li>
+              Canada Cord | Girl Guides Of Canada</li>
 
           </ul>
         </div>
