--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 industry experts</li>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2024 - Present</span>
+              <span class="text-primary">Febaruary 2025 - March 2025</span>
             </div>
           </div>
         </div>
