--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">VP | Events and Outreach for OTU Student Chapter ACM-W</h3>
+              <h3 class="mb-0">Events and Outreach for OTU Student Chapter ACM-W</h3>
               <li>Organized and ran monthly events around career development, networking, and empowering
                 women in computing</li>
               <li>Provided feedback on ideas and changes to help rpoduce the best possible result</li>
