--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
   <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <!-- <meta charset="utf-8"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Heather Meatherall</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -67,20 +65,25 @@
     <div class="container-fluid p-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0 typewriter">Heather
+        <div class="container">
+          <h1 class="mb-0 typewriter"> Heather
             <span class="text-primary">Meatherall</span>
           </h1>
           <div class="subheading mb-5">
-            <a href="heathermeat7@gmail.com">heathermeat7@gmail.com</a>
+            <a href="mailto:heathermeat7@gmail.com">heathermeat7@gmail.com</a>
           </div>
-          <p class="mb-5">I'm computer science student at Ontario Tech University with a passion for designing and developing
-            creative solutions to problems, with a particular interest in data analysis, web development and QA. I have a wide variety
-            of skills and life experience that I bring to every task. I'm unafraid of challenges, able to adapt quickly,
-            and always open to learning new things
+          <div>
+            <p class="mb-5">
+            I'm a computer science student at Ontario Tech University with a passion for 
+            gaining new skills and experiences. I get excited about new technologies and
+             I love designing and developing creative solutions to problems. I have a wide variety of 
+             skills and life experience that I bring to every task. I have a particular interest in 
+             data analysis, web development and QA, but I'll try anything once and 
+             I'm not afraid of a challenge!
             <br><br>
-            In my free time, I can be found writing poetry, crocheting, or throwing my dnd characters into new and exciting situations</p>
-
+            In my free time, I can be found crocheting, playing music, going on public transit
+             adventures or throwing my dnd charatcers into new and exciting situations. </p>
+          </div>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item flip">
               <a href="https://www.linkedin.com/in/heather-meatherall">
@@ -91,7 +94,7 @@
               </a>
             </li>
             <li class="list-inline-item flip">
-              <a href="https://github.com/Heather-meatherall">
+              <a href="https://github.com/Heather-meatherall/Heather-Meatherall-Projects">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -105,30 +108,39 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+          <!-- ministry of public and business service delivery and procurement -->
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Co-op Developer</h3>
+              <div class="subheading mb-3">Public & Business Services & Procurement <br> Ontario Public Service</div>
+              <li>Created and executed complex test cases for an automated payment processing system, resulting in little to no errors occurring during live use </li>
+              <li>Collaborated with a team to organize and run a companywide case competition, providing students with hands-on experience around idea generation, prototyping, and presenting </li>
+              <li>Organized weekly meeting to help other co-op students improve their coding skills</li>
+              <li>Assisted in training new co-workers on how to use the system, minimizing delays to testing </li>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2025 - August 2025</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Co-op Junior Programmer</h3>
-              <div class="subheading mb-3">Treasury Board Secretariat</div>
-              <li>
-                 Created and executed complex test cases for the RIDE-IT project
-              </li>
-              <li>
-                Coded PowerShell scripts to autmoatoe processes and monitor server status
-              </li>
-              <li>
-                Developed a prototype of an AI resume scanner tool during a month long hackathon
-              </li>
-              <li>Interacted with coworkers in a professional manner</li>
+              <div class="subheading mb-3">Public & Business Services & Procurement <br> Ontario Public Service</div>
+              <li>Worked with a team to write PowerShell scripts to monitor server space, helping to limit disruptions caused by limited space</li>
+              <li>Lead a team in developing AI resume scanner tool for a month-long hackathon resulting in a second-place victory</li>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2024 - August 2024</span>
             </div>
           </div>
 
+          
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Summer Web Intern</h3>
+              <h3 class="mb-0">Summer Intern for Calvary Website Special Projects</h3>
               <div class="subheading mb-3">Calvary United Church</div>
               <li>Assisted in designing and developing the church's website</li>
               <li>Provided feedback on ideas and changes to help rpoduce the best possible result</li>
@@ -221,7 +233,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Events and Outreach for OTU Student Chapter ACM-W</h3>
+              <h3 class="mb-0">VP | Events and Outreach for OTU Student Chapter ACM-W</h3>
               <li>Organized and ran monthly events around career development, networking, and empowering
                 women in computing</li>
               <li>Provided feedback on ideas and changes to help rpoduce the best possible result</li>
@@ -245,7 +257,7 @@
                 industry experts</li>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Febaruary 2025 - March 2025</span>
+              <span class="text-primary">February 2025 - March 2025</span>
             </div>
           </div>
         </div>
