--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li class="list-inline-item flip">
-              <a href="https://github.com/Heather-meatherall/Heather-Meatherall-Projects">
+              <a href="https://github.com/Heather-meatherall/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
