--- a/index.html
+++ b/index.html
@@ -207,16 +207,19 @@
               <i class="devicons devicons-java"></i>
             </li>
 
-          </ul>
+          </ul> 
           
           <div class="subheading mb-3">Other Skills</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Oral and written communication</li>
+              Verbal and written communication</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Time Management</li>
+              Organized</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Unafraid of Challenges</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Team player</li>
@@ -233,7 +236,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">VP | Events and Outreach for OTU Student Chapter ACM-W</h3>
+              <h3 class="mb-0">Events Coordinator for OTU Student Chapter ACM-W</h3>
               <li>Organized and ran monthly events around career development, networking, and empowering
                 women in computing</li>
               <li>Provided feedback on ideas and changes to help rpoduce the best possible result</li>
