added projects section, updated links

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
@@ -94,7 +97,7 @@
               </a>
             </li>
             <li class="list-inline-item flip">
-              <a href="https://github.com/Heather-meatherall/Heather-Meatherall-Projects">
+              <a href="https://github.com/Heather-meatherall">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -102,18 +105,25 @@
               </a>
             </li>
           </ul>
-        </div>
-      </section>
+          </section>
+
+          <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+            <h2 class="mb-5">Projects</h2>
+          <div>
+            <iframe src="https://diceroller.neocities.org" title="DnD Dice Roller"></iframe>
+            <iframe src="https://heather-meatherall.github.io/DnD_Stats/"></iframe>
+            <iframe src="https://heather-meatherall.github.io/PoetryPortfolio/"></iframe>
+          </div>  
+          </section>
+
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
-          <!-- ministry of public and business service delivery and procurement -->
-
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Co-op Developer</h3>
-              <div class="subheading mb-3">Public & Business Services & Procurement <br> Ontario Public Service</div>
+              <div class="subheading mb-3">Ministry of Public & Business Services & Procurement <br> Ontario Public Service</div>
               <li>Created and executed complex test cases for an automated payment processing system, resulting in little to no errors occurring during live use </li>
               <li>Collaborated with a team to organize and run a companywide case competition, providing students with hands-on experience around idea generation, prototyping, and presenting </li>
               <li>Organized weekly meeting to help other co-op students improve their coding skills</li>
@@ -127,7 +137,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Co-op Junior Programmer</h3>
-              <div class="subheading mb-3">Public & Business Services & Procurement <br> Ontario Public Service</div>
+              <div class="subheading mb-3">Ministry of Public & Business Services & Procurement <br> Ontario Public Service</div>
               <li>Worked with a team to write PowerShell scripts to monitor server space, helping to limit disruptions caused by limited space</li>
               <li>Lead a team in developing AI resume scanner tool for a month-long hackathon resulting in a second-place victory</li>
             </div>
