--- a/index.html
+++ b/index.html
@@ -110,9 +110,20 @@
           <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
             <h2 class="mb-5">Projects</h2>
           <div>
-            <iframe src="https://diceroller.neocities.org" title="DnD Dice Roller"></iframe>
-            <iframe src="https://heather-meatherall.github.io/DnD_Stats/"></iframe>
-            <iframe src="https://heather-meatherall.github.io/PoetryPortfolio/"></iframe>
+            <a href="https://diceroller.neocities.org">
+              <h3>DnD Dicer Roller</h3>
+              <iframe src="https://diceroller.neocities.org" title="DnD Dice Roller"></iframe>
+            </a>
+            <br></br>
+            <a href="https://heather-meatherall.github.io/DnD_Stats/">
+              <h3>Comparing DnD Stats</h3>
+              <iframe src="https://heather-meatherall.github.io/DnD_Stats/"></iframe>
+            </a>
+            <br></br>
+            <a href="https://heather-meatherall.github.io/PoetryPortfolio/">
+              <h3>Heather Meatherall's Poetry Portfolio</h3>
+              <iframe src="https://heather-meatherall.github.io/PoetryPortfolio/"></iframe>
+            </a>
           </div>  
           </section>
 
@@ -176,6 +187,7 @@
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science with Co-op </div>
               <div>Mathematics Minor</div>
+              <div>Women For STEM Scholarship Recipient</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2021 - May 2026</span>
